# todo-bytes

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: DEVELOPER.md
tests/: conftest.py  test_cli.py  test_config.py  test_dates.py  test_ics.py  test_mcp_server.py  test_server.py  test_store.py  test_views.py
todo_bytes/: __init__.py  cli.py  config.py  dates.py  ics.py  mcp_server.py  models.py  server.py  store.py  views.py
todo_bytes/skills/todo-bytes/: SKILL.md
todo_bytes/web/: app.js  index.html  style.css
